--- a/resources/assets/scss/components/_footer.scss
+++ b/resources/assets/scss/components/_footer.scss
@@ -25,3 +25,29 @@
 
     &__copyright {}
 }
+
+/* Scroll to top link */
+#to-top {
+    display: none;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    padding: 6px 15px;
+    font-size: 20px;
+    text-align: center;
+    color: #ffffff;
+    background-color: #777;
+    opacity: 0.25;
+    filter: alpha(opacity=25);
+}
+
+#to-top:hover {
+    color: #ffffff;
+    text-decoration: none;
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+
+#to-top:hover {
+    background-color: #1bbae1;
+}
