--- a/resources/assets/scss/components/_banner.scss
+++ b/resources/assets/scss/components/_banner.scss
@@ -1,5 +1,4 @@
 $banner-background-color:#000;
-
 .banner {
     // height: 100vh !important;
     margin-top: $header-height;
@@ -10,20 +9,10 @@ $banner-background-color:#000;
     min-height: calc(100%);
     position: relative;
     background-color: $banner-background-color;
-
-    @media only screen and (max-width: $tablet) {
-        height: 100vh !important;
-    }
-
-    @media only screen and (max-height:$mobile) {
-        height: 300px !important;
-    }
-
     &__slick {
         display: block;
         height: 100%;
         position: relative;
-
         button.slick-prev.slick-arrow {
             background: #f00;
             width: 20px;
@@ -37,7 +26,6 @@ $banner-background-color:#000;
             bottom: 0 !important;
             margin: auto;
         }
-
         button.slick-next.slick-arrow {
             background: #f00;
             width: 20px;
@@ -51,23 +39,19 @@ $banner-background-color:#000;
             bottom: 0 !important;
             margin: auto;
         }
-
         div {
             width: 100%;
             height: 100%;
         }
     }
-
     .slick-dots {
         position: absolute;
         bottom: 0;
         width: 100%;
         text-align: center;
         padding: 0;
-
         li {
             display: inline-block;
-
             button {
                 width: 20px;
                 height: 20px;
@@ -81,7 +65,6 @@ $banner-background-color:#000;
                 box-sizing: border-box;
                 padding: 0 !important;
             }
-
             &.slick-active {
                 button {
                     background: $color-white;
@@ -89,22 +72,37 @@ $banner-background-color:#000;
             }
         }
     }
-
-    &__item {}
-
-    &__content {
-        h1 {
-            color: $color-white;
-            font-size: 2.8em;
-            line-height: 55px;
+    &__item {
+        &--middle {
+            @include flex;
+            @include flex-align-items(center);
+            @include flex-justify-content(center);
         }
-
-        &--description {
-            padding-left: 100px;
-            padding-top: 20px;
-
+    }
+    &__content {
+        top: 0;
+        bottom: 0;
+        max-width: 100%;
+        margin: auto;
+        position: inherit;
+        top: inherit;
+        bottom: inherit;
+        height: auto !important;
+        &--text {
+            height: auto !important;
+            max-width: 1400px;
+            margin-top: -11%;
+            h1 {
+                font-size: 4em;
+                line-height: 70px;
+                text-transform: uppercase;
+                letter-spacing: 15px;
+                font-weight: bold;
+                color: $color-white;
+            }
             p {
-                margin-bottom: 15px;
+                font-size: 1.2em;
+                color: $color-white;
             }
         }
     }
@@ -119,24 +117,20 @@ $banner-background-color:#000;
     background-position: center !important;
     @include flex;
     @include flex-align-items(center);
-
     &__wrapper {
         position: relative;
         height: 100%;
         max-width: 1400px;
     }
-
     &__item {
         position: absolute;
         bottom: 0;
         width: 100%;
         left: 0;
     }
-
     &__content {
         width: 100%;
         max-width: 100%;
-
         h1 {
             border-top: 5px solid $color-secondary;
             display: inline-block;
@@ -145,11 +139,9 @@ $banner-background-color:#000;
             padding: 14px 25px;
             font-size: 2em;
             font-weight: $weight-extrabold;
-
             @media only screen and (max-width: $tablet) {
                 font-size: 1.5em;
             }
-
             @media only screen and (max-width:$mobile) {
                 font-size: 1em;
             }
