--- a/resources/assets/scss/utilities/_global-resets.scss
+++ b/resources/assets/scss/utilities/_global-resets.scss
@@ -1,5 +1,3 @@
-
-
 .no-padding {
     padding-left: 0;
     padding-right: 0;
@@ -12,7 +10,6 @@ body {
     background-position: top center;
 }
 
-
 ul {
     &.inline-block {
         list-style: none;
@@ -21,59 +18,17 @@ ul {
         li {
             display: inline-block;
         }
-
-        &.display-table {
-            display: table;
-
-            @media only screen and (max-width:$mobile) {
-                display: block;
-            }
-
-            li {
-                display: table-cell;
-                width: auto;
-                vertical-align: middle;
-
-                @media only screen and (max-width:$mobile) {
-                    display: block;
-                    width:100%;
-                }
-
-                @media only screen and (max-width:$tablet) {
-                    margin-bottom:25px;
-                }
-            }
-
-
-        }
     }
-
 }
 
-
 img {
+    max-width: 100%;
     &.img-responsive {
         max-width: 100%;
     }
 }
 
-.paragraph-text {
-    > p {
-        font-size: 1.5em;
-        line-height: 30px;
-        font-weight: $weight-semibold;
-
-        @media only screen and (max-width:$mobile) {
-            font-size: .8em;
-            line-height: 24px;
-        }
-    }
-}
-
-
-
 @media only screen and (min-width:768px) {
-
     .margin {
         &--top50 {
             margin-top: 50px !important;
@@ -84,8 +39,6 @@ img {
         &--top30 {
             margin-top: 30px !important;
         }
-
-
         &--bottom40 {
             margin-bottom: 40px;
         }
@@ -98,65 +51,38 @@ img {
         &--bottom70 {
             margin-bottom: 70px;
         }
-
         &--both70 {
             margin-bottom: 70px;
             margin-top: 70px;
         }
-
         &--both80 {
             margin-bottom: 80px;
             margin-top: 80px;
         }
     }
-
 }
-
-
 
 .image-background {
     position: relative;
-	z-index: 1;
-	background-size: cover;
-	// background-color: #000;
-	width: 100%;
-	min-height: 150px;
-
-    img {
+    z-index: 1;
+    background-size: cover;
+    // background-color: #000;
+    width: 100%;
+    min-height: 150px;
+    >img {
         position: relative;
         z-index: 1;
         display: none !important;
     }
 }
 
-
-@media only screen and (min-width:$tablet) {
-    .padding--both {
-        padding: 95px 0 !important;
-    }
-}
-
-
 .invisible {
     display: none !important;
 }
 
-
-.hide--mobile {
-    display: inline;
-}
-
-@media only screen and (max-width:1024px) {
-    .hide--mobile {
-        display: none;
-    }
-}
-
-
 .row {
     &::before,
     &::after {
-    display: inline-block !important;
+        display: inline-block !important;
     }
 }
-
