Randall: Cookie Consent

--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -12,6 +12,7 @@
 @import '~slick-carousel/slick/slick';
 @import '~slick-carousel/slick/slick-theme';
 @import "~select2/dist/css/select2";
+@import "~cookieconsent/build/cookieconsent.min.css";
 // variables
 @import "utilities/mixin";
 @import "utilities/variables";
