--- a/resources/assets/scss/components/_banner.scss
+++ b/resources/assets/scss/components/_banner.scss
@@ -1,12 +1,12 @@
 $banner-background-color:#000;
 .banner {
-    // height: 100vh !important;
+    /*height: 100vh !important;
     margin-top: $header-height;
     height: 100vh;
     overflow: hidden;
-    // padding-left: 3%;
-    // padding-right: 3%;
-    min-height: calc(100%);
+    padding-left: 3%;
+    padding-right: 3%;
+    min-height: calc(100%);*/
     position: relative;
     background-color: $banner-background-color;
     &__slick {
@@ -105,6 +105,53 @@ $banner-background-color:#000;
                 color: $color-white;
             }
         }
+    }
+
+
+    &__image-slide {
+        position: relative;
+        display: block;
+        width: 100%;
+        padding: 0 0 0;
+        .banner-overlay {
+            position: absolute;
+            display: block;
+            top: 0;
+            left: 0;
+            right: 0;
+            width: 100%;
+            min-height: 645px;
+            z-index: 2;
+        }
+        &--item {
+            position: relative;
+            display: block;
+            font-size: 0;
+            z-index: 1;
+        }
+        .item-left {
+            display: inline-block;
+            vertical-align: top;
+            width: 42%;
+        }
+        .item-right {
+            display: inline-block;
+            vertical-align: top;
+            width: 58%;
+        }
+        .banner-img-holder {
+            display: block;
+            min-height: 615px;
+        }
+    }
+    &__thumb-slide {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
     }
 }
 
