--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -1,10 +1,11 @@
 // Control settings
 $header-height:100px;
 $header-scrolling-height:100px;
-$header-background:#f00;
+$header-background:transparent;
 
 header {
-    position: absolute;
+    position: relative;
+    display: block;
     width: 100%;
     z-index: 9;
     padding: 0;
@@ -12,7 +13,7 @@ header {
     left: 0;
     // overflow: hidden;
     // position: fixed;
-    height: $header-height;
+    min-height: $header-height;
     background: $header-background !important;
     @include flex;
     @include flex-align-items(center);
