--- a/resources/assets/scss/components/_banner.scss
+++ b/resources/assets/scss/components/_banner.scss
@@ -8,7 +8,7 @@ $banner-background-color:#000;
     padding-right: 3%;
     min-height: calc(100%);*/
     position: relative;
-    background-color: $banner-background-color;
+    //background-color: $banner-background-color;
     &__slick {
         display: block;
         height: 100%;
@@ -107,51 +107,124 @@ $banner-background-color:#000;
         }
     }
 
-
+    /*.banner-overlay {
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        min-height: 645px;
+        z-index: 2;
+    }*/
     &__image-slide {
         position: relative;
         display: block;
         width: 100%;
         padding: 0 0 0;
-        .banner-overlay {
-            position: absolute;
-            display: block;
-            top: 0;
-            left: 0;
-            right: 0;
-            width: 100%;
-            min-height: 645px;
-            z-index: 2;
-        }
+
         &--item {
             position: relative;
             display: block;
             font-size: 0;
-            z-index: 1;
+            top: -18px;
+            z-index: 2;
         }
         .item-left {
+            position: relative;
             display: inline-block;
             vertical-align: top;
             width: 42%;
+            .banner-content-desc {
+                position: absolute;
+                top: 184px;
+                min-width: 760px;
+                left: 26%;
+                z-index: 3;
+                h1 {
+                    color: #303132;
+                    font: 300 40px $font-primary;
+                }
+                h2 {
+                    color: #303132;
+                    font: 900 80px $font-primary;
+                }
+            }
         }
         .item-right {
+            position: relative;
             display: inline-block;
             vertical-align: top;
             width: 58%;
+
+            &::before {
+                content: '';
+                display: block;
+                width: 100%;
+                min-width: 1920px;
+                height: 100%;
+                min-height: 645px;
+                position: absolute;
+                top: 0;
+                right: 0;
+                z-index: 2;
+                background: url('../images/banner/hp-banner-overlay.png') no-repeat;
+            }
         }
         .banner-img-holder {
             display: block;
-            min-height: 615px;
+            min-height: 633px;
         }
     }
     &__thumb-slide {
         position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        width: 100%;
+        top: 140px;
+        left: 40px;
+        width: 100px;
         height: 100%;
         z-index: 1;
+        .slick-slide {
+            float: none;
+        }
+        &--item {
+            position: relative;
+            display: block;
+            margin-bottom: 28px;
+            .thumb-holder {
+                width: 95px;
+                height: 103px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+                span {
+                    position: absolute;
+                    top: 30px;
+                    left: 15px;
+                    color: #ffffff;
+                    font: 900 16px/20px $font-primary;
+                    @include transition-all(all 0.3s ease-in-out);
+                }
+                &:hover {
+                    span {
+                        color: #ab1a2d;
+                    }
+                }
+            }
+        }
+    }
+    .target {
+        display: block;
+        max-width: 100%;
+        height: auto;
+        margin: 0 auto;
+    }
+
+    .alpha-target {
+        mask-image: $brush-circle;
+        mask-mode: alpha;
+        mask-repeat: no-repeat;
+        mask-size: 95px;
     }
 }
 
