--- a/resources/assets/scss/utilities/_mixin.scss
+++ b/resources/assets/scss/utilities/_mixin.scss
@@ -93,6 +93,13 @@ $base__font-size :16px;
     -ms-flex-direction: column;
     flex-direction: column;
 }
+@mixin transition-all($all-ein){
+    -webkit-transition: $all-ein;
+    -moz-transition: $all-ein;
+    -ms-transition: $all-ein;
+    -o-transition: $all-ein;
+    transition: $all-ein;
+}
 
 @mixin transition($a:0.3s) {
     -webkit-transition: all $a ease;
