--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -8,20 +8,22 @@ header {
     position: relative;
     display: block;
     width: 100%;
+    height: 100%;
     z-index: 9;
     padding: 0;
     top: 0;
     left: 0;
-     overflow: hidden;
+     //overflow: hidden;
     // position: fixed;
     min-height: $header-height;
     background: $header-background !important;
     @include flex;
     @include flex-align-items(center);
+    @include transition-all(all 0.5s ease-in-out);
 
     &.scrolling {
         position: fixed !important;
-        height: $header-scrolling-height;
+        height: auto;
         top: 0;
         left: 0;
         width: 100%;
@@ -32,20 +34,26 @@ header {
 
     .main-nagivation-desktop {
         .navbar-bar {
-            @include flex;
-            @include flex-align-items(center);
-
-            &__wrapper {
-                @include flex;
-                @include flex-justify-content(space-around);
-                width: 100%;
-            }
+            position: relative;
+            margin: 27px 0;
+            z-index: 9;
+            &__wrapper {}
 
             ul {
+                position: relative;
                 list-style: none;
                 margin: 0;
                 padding: 0;
                 text-align: right;
+                & > li {
+                    position: relative;
+                    display: inline-block;
+                    & > a {
+                        color: $color-black;
+                        font: 300 18px $font-primary;
+                        text-transform: uppercase;
+                    }
+                }
             }
         }
     }
