--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19284,6 +19284,8 @@ section {
   /* END */
   /* START */
   /* END */
+  /* START */
+  /* END */
 }
 section.homepage {
   overflow: hidden;
@@ -19627,6 +19629,196 @@ section.chapters {
   width: 100%;
   height: 100%;
   min-height: 778px;
+}
+section.chapters h2 {
+  position: relative;
+  display: inline-block;
+  top: 305px;
+  left: -277px;
+  color: #fff;
+  -webkit-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+}
+section.chapters .map-content {
+  position: relative;
+  display: block;
+  height: 100%;
+  min-height: 778px;
+}
+section.chapters .btn-wrap {
+  position: absolute;
+  bottom: 85px;
+  left: -125px;
+}
+section .feat-members p {
+  font-size: 21px;
+}
+section .feat-members .feat-members-slider {
+  position: relative;
+  display: block;
+  width: 100%;
+  margin: 30px 0;
+  padding: 0 0 70px;
+  /* Slick Arrows */
+  /* Slick Dots */
+}
+section .feat-members .feat-members-slider--item {
+  position: relative;
+}
+section .feat-members .feat-members-slider--item a {
+  position: relative;
+  outline: none;
+  text-decoration: none;
+}
+section .feat-members .feat-members-slider--item a .image-holder {
+  position: relative;
+  display: block;
+  width: 100%;
+  max-width: 268px;
+  overflow: hidden;
+  background: #ab1a2d;
+  border-radius: 100%;
+}
+section .feat-members .feat-members-slider--item a .image-holder img {
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+}
+section .feat-members .feat-members-slider--item a .desc-txt {
+  position: relative;
+  display: block;
+  text-align: center;
+  margin-top: 20px;
+}
+section .feat-members .feat-members-slider--item a .desc-txt .name {
+  color: #000;
+  font: 900 21px "Open Sans", sans-serif;
+  text-transform: uppercase;
+}
+section .feat-members .feat-members-slider--item a .desc-txt .chapter {
+  color: #ab1a2d;
+  font: 300 18px "Open Sans", sans-serif;
+  text-transform: uppercase;
+}
+section .feat-members .feat-members-slider--item a:hover .image-holder img {
+  opacity: 0.7;
+}
+section .feat-members .feat-members-slider .slick-prev:hover, section .feat-members .feat-members-slider .slick-prev:focus, section .feat-members .feat-members-slider .slick-next:hover, section .feat-members .feat-members-slider .slick-next:focus {
+  opacity: 0.8;
+}
+section .feat-members .feat-members-slider .slick-prev {
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -53px -46px;
+  width: 29px;
+  height: 24px;
+  font-size: 0;
+  border: none;
+  position: absolute;
+  top: 100%;
+  left: 40%;
+  cursor: pointer;
+  z-index: 9;
+}
+section .feat-members .feat-members-slider .slick-prev::before {
+  display: none;
+}
+section .feat-members .feat-members-slider .slick-next {
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -11px -46px;
+  width: 29px;
+  height: 24px;
+  font-size: 0;
+  border: none;
+  position: absolute;
+  top: 100%;
+  right: 40%;
+  cursor: pointer;
+  z-index: 9;
+}
+section .feat-members .feat-members-slider .slick-next::before {
+  display: none;
+}
+section .feat-members .feat-members-slider .slick-dots {
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  display: block;
+  width: 100%;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
+section .feat-members .feat-members-slider .slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 10px;
+  padding: 0;
+  cursor: pointer;
+  border-radius: 100%;
+}
+section .feat-members .feat-members-slider .slick-dots li button {
+  background: transparent;
+  width: 10px;
+  height: 10px;
+  border: none;
+  font-size: 0;
+  line-height: 0;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  border-radius: 100%;
+}
+section .feat-members .feat-members-slider .slick-dots li button::before {
+  font-family: slick;
+  font-size: 6px;
+  line-height: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  opacity: 1;
+  background: #b6b7b7;
+  text-align: center;
+  content: "";
+  display: block;
+  -webkit-font-smoothing: antialiased;
+  border-radius: 100%;
+}
+section .feat-members .feat-members-slider .slick-dots li.slick-active button {
+  width: 22px;
+  height: 22px;
+}
+section .feat-members .feat-members-slider .slick-dots li.slick-active button:before {
+  background: #000000;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+}
+section .feat-members .feat-members-slider .slick-dots li.slick-active button:after {
+  content: "";
+  position: relative;
+  top: -11px;
+  left: -11px;
+  right: 0;
+  display: block;
+  border: 1px solid #000000;
+  width: 22px;
+  height: 22px;
+  border-radius: 100%;
+}
+section .sponsors .sponsor-logo {
+  position: absolute;
+  top: -20px;
+  right: 0;
+  width: 62%;
+  padding: 0 0 0 70px;
+  z-index: 1;
+  background: #f8f6f6;
+  border-top-left-radius: 150px;
+  border-bottom-left-radius: 150px;
 }
 
 .global-featured-slider__top {
