--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -391,13 +391,228 @@ section {
         width: 100%;
         height: 100%;
         min-height: 778px;
+        h2 {
+            position: relative;
+            display: inline-block;
+            top: 305px;
+            left: -277px;
+            color: $color-white;
+            -webkit-transform: rotate(-90deg);
+            -moz-transform: rotate(-90deg);
+            -ms-transform: rotate(-90deg);
+            -o-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+        }
+        .map-content {
+            position: relative;
+            display: block;
+            height: 100%;
+            min-height: 778px;
+        }
+        .btn-wrap {
+            position: absolute;
+            bottom: 85px;
+            left: -125px;
+        }
     }
     /* END */
 
 
     /* START */
+    .feat-members {
+        p {
+            font-size: 21px;
+        }
+        .feat-members-slider {
+            position: relative;
+            display: block;
+            width: 100%;
+            margin: 30px 0;
+            padding: 0 0 70px;
 
+            &--item {
+                position: relative;
+                a {
+                    position: relative;
+                    outline: none;
+                    text-decoration: none;
+                    .image-holder {
+                        position: relative;
+                        display: block;
+                        width: 100%;
+                        max-width: 268px;
+                        overflow: hidden;
+                        background: $site-red;
+                        -webkit-border-radius: 100%;
+                        -moz-border-radius: 100%;
+                        border-radius: 100%;
+                        img {
+                            opacity: 1;
+                            -webkit-transition: all 0.3s ease-in-out;
+                            -moz-transition: all 0.3s ease-in-out;
+                            -ms-transition: all 0.3s ease-in-out;
+                            -o-transition: all 0.3s ease-in-out;
+                            transition: all 0.3s ease-in-out;
+                        }
+                    }
+                    .desc-txt {
+                        position: relative;
+                        display: block;
+                        text-align: center;
+                        margin-top: 20px;
+                        .name {
+                            color: $color-black;
+                            font: 900 21px $font-primary;
+                            text-transform: uppercase;
+                        }
+                        .chapter {
+                            color: $site-red;
+                            font: 300 18px $font-primary;
+                            text-transform: uppercase;
+                        }
+                    }
+                    &:hover {
+                        .image-holder img {
+                            opacity: 0.7;
+                        }
+                    }
+                }
+            }
+
+            /* Slick Arrows */
+            .slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
+                opacity: 0.8;
+            }
+            .slick-prev {
+                background: url('../images/sprite.png') no-repeat;
+                background-position: -53px -46px;
+                width: 29px;
+                height: 24px;
+                font-size: 0;
+                border: none;
+                position: absolute;
+                top: 100%;
+                left: 40%;
+                cursor: pointer;
+                z-index: 9;
+                &::before{display: none;}
+            }
+            .slick-next {
+                background: url('../images/sprite.png') no-repeat;
+                background-position: -11px -46px;
+                width: 29px;
+                height: 24px;
+                font-size: 0;
+                border: none;
+                position: absolute;
+                top: 100%;
+                right: 40%;
+                cursor: pointer;
+                z-index: 9;
+                &::before{display: none;}
+            }
+            /* Slick Dots */
+
+            .slick-dots {
+                position: absolute;
+                bottom: -5px;
+                left: 0;
+                display: block;
+                width: 100%;
+                padding: 0;
+                list-style: none;
+                text-align: center;
+            }
+            .slick-dots li {
+                position: relative;
+                display: inline-block;
+                width: 10px;
+                height: 10px;
+                margin: 0 10px;
+                padding: 0;
+                cursor: pointer;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li button {
+                background: transparent;
+                width: 10px;
+                height: 10px;
+                border: none;
+                font-size: 0;
+                line-height: 0;
+                display: inline-block;
+                cursor: pointer;
+                outline: none;
+                position: relative;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li button::before {
+                font-family: slick;
+                font-size: 6px;
+                line-height: 20px;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 10px;
+                height: 10px;
+                opacity: 1;
+                background: #b6b7b7;
+                text-align: center;
+                content: '';
+                display: block;
+                -webkit-font-smoothing: antialiased;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li.slick-active button {
+                width: 22px;
+                height: 22px;
+            }
+            .slick-dots li.slick-active button:before {
+                background: #000000;
+                width: 10px;
+                height: 10px;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li.slick-active button:after {
+                content: '';
+                position: relative;
+                top: -11px;
+                left: -11px;
+                right: 0;
+                display: block;
+                border: 1px solid #000000;
+                width: 22px;
+                height: 22px;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+        }
+
+    }
     /* END */
 
-
+    /* START */
+    .sponsors {
+        .sponsor-logo {
+            position: absolute;
+            top: -20px;
+            right: 0;
+            width: 62%;
+            padding: 0 0 0 70px;
+            z-index: 1;
+            background: #f8f6f6;
+            border-top-left-radius: 150px;
+            border-bottom-left-radius: 150px;
+        }
+    }
+    /* END */
 }
